--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <li><a href="index.html#estilos-css">Estilos CSS en htm</a></li>
         <li><a href="index.html#Imagenes">Imagenes</a></li>
         <li><a href="index.html#Figuras">Figuras</a></li>
-        <li><a href="index.html#lista_ordenada">lista ordenadas></a></li>
-        <li><a href="index.html#lista_desordenada">Listas desordenadas></a></li>
+        <li><a href="index.html#lista_ordenada">lista ordenadas</a></li>
+        <li><a href="index.html#lista_desordenada">Listas desordenadas</a></li>
         <li><a href="index.html#enlaces">Enlaces</a></li>
-        <li><a href="index.html#elementos-interactivos">Elementos interactivos></a></li>
-        <li><a href="index.html#idframes">iframes<</a></li>
+        <li><a href="index.html#elementos-interactivos">Elementos interactivos</a></li>
+        <li><a href="index.html#idframes">iframes</a></li>
+        <li><a href="index.html#formularios">Formulario</a></li>
     </ul>
     
     <hr>
@@ -77,6 +78,7 @@
         -Hacer formatos
         -Diseñar la pagina
     </pre>
+
     </p>
     <a href="index.html#inicio"><img src="imagines/rana-imagen-animada-0015.gif" alt="rana" width="50" height="50"></a>
     <hr>
@@ -203,7 +205,7 @@
 <details>
     <summary>titulo del acordeon</summary>
     <article>
-        <h3>Contenido del acordeon</h3>
+        <h3 >Contenido del acordeon</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, voluptas animi mollitia alias aspernatur iste quasi labore, ipsum, ipsam quibusdam nulla. Saepe exercitationem ad officiis quaerat cupiditate eum laudantium blanditiis.</p>
         <img src="imagines/tablehtml5.jpg" alt="tabla del html"><br>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus nobis porro unde, ad quis corporis illum laboriosam suscipit eaque quas quibusdam sit vel vitae, doloribus aspernatur ipsam repellendus, reiciendis excepturi.</p>
@@ -230,15 +232,67 @@
 <h2 id="idframes">iframes</h2>
 <iframe src="https://www.chevyplan.com.co/home" frameborder="1"></iframe>
 <br>
-<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126459.80704142839!2d-72.57446108686027!3d7.908754215521437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e66459c645dd28b%3A0x26736c1ff4db5caa!2sC%C3%BAcuta%2C%20Norte%20de%20Santander!5e0!3m2!1ses-419!2sco!4v1683258431394!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="1"></iframe>
 <br>
-<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31612.760579694313!2d-72.62542519849005!3d7.9372889935342075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e6651fd16e81307%3A0xbe0b0772d90794ee!2sEl%20Zulia%2C%20Norte%20de%20Santander!5e0!3m2!1ses-419!2sco!4v1683258627519!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.66817909536!2d-72.58681172663687!3d7.929682692094123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e664e26dd289fa7%3A0xcbb81455b30150c3!2sPuente%20Mariano%20Ospina%20Perez%20El%20Zulia!5e0!3m2!1ses!2sco!4v1683408949716!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 <br>
-<iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/K3xmRF8ab1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0"></iframe>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CmXx06LnVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br>
+<h2 id="formularios">Formulario</h2>
+<h3>Elemnetos de los formularios</h3>
+
+<input type="text">
+<br>
+<input type="checkbox">
+<br>
+<input type="radio">
+<br>
+<input type="date">
+<br>
+<input type="color">
+<br>
+<input type="button" value="button">
+<br>
+<input type="submit">
+<br>
+<input type="file">
+<br>
+<input type="file" multiple>
+<br>
+<input type="email">
+<br>
+<input type="password">
+<br>
+<input type="search">
+<br>
+<textarea name="" id="" cols="50" rows="10"></textarea>
+<br>
+<select name="" id="">
+    <option value="">html</option>
+    <option value="">js</option>
+    <option value="">CSS</option>
+</select>
+<br><br>
+<select name="" id="" multiple>
+    <option value="">html</option>
+    <option value="">js</option>
+    <option value="">CSS</option>
+    <option value="">hpt</option>
+</select>
+<br>
+<form action="">
+
+    
+</form>
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+<br>
+<a href="index.html#inicio"><img src="imagines/rana-imagen-animada-0015.gif" alt="rana" width="50" height="50"></a>
+<br>
+<br>
+<br>
+<br>
     <script>
         console.log("Hola estamos aprendiendo html")
     </script>
