--- a/index.html
+++ b/index.html
@@ -281,9 +281,16 @@
     <option value="">hpt</option>
 </select>
 <br>
+<h3>Ejemplo de Fomulario</h3>
+<h4>Formulario de Login</h4>
 <form action="">
-
-    
+<input type="text" name="usuario">
+<br>
+<input type="password" name="contraseña">
+<br>
+<input type="submit">
+<br>
+<input type="reset">
 </form>
 
 
