selectores_de_atributos

--- a/accest/index2.html
+++ b/accest/index2.html
@@ -52,6 +52,52 @@
     <article id="selectores-avanzados">
         <h2>Selectores avanzados</h2>
 
+        <h3>Selectores de hijos</h3>
+
+        <h4>Selectores de hijos directos</h4>
+    <ul class="hijos-directos">
+        <li><b>Primavera</b></li>
+        <li><b>Invierno</b></li>
+        <li><b>Otoño</b></li>
+        <li><b>Verano</b></li>
+    </ul>
+        <h4>Selectores de hijos desendientes</h4>
+
+        <ul class="hijos-desendientes">
+            <li><b>Primavera</b></li>
+            <li><b>Invierno</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Verano</b></li>
+        </ul>
+
+        <h3>Selector de  hermanos</h3>
+        <h4> Seletor de Hermanos en general</h4>
+        <ul>
+            <li><b>Primavera</b></li>
+            <li class="hermanos-general"><b>Invierno</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+        </ul>
+        <h4>Hermanos adyacentes</h4>
+        <ul>
+            <li><b>Primavera</b></li>
+            <li class="hermanos-adyacentes"><b>Invierno</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+        </ul>
+       
+        <h3>Selectores de atributos</h3>
+        <nav class="selectores-atributos">
+            <ul>
+                <li><a href="https://jonmircha.com" target="_blank">Inicio</a></li>
+                <li><a href="https://jonmircha.com/cursos" target="_blank">Cursos</a></li>
+                <li><a href="https://jonmircha.com/blog" target="_blank">Blog</a></li>
+                <li><a href="https://jonmircha.com/mentoria" target="_blank">Mentoria</a></li>
+                <li><a href="https://jonmircha.com/hola" target="_blank">Hola</a></li>
+            </ul>
+        </nav>
+
+
 
 
 
